Bug 58083 - systemd doesn't recognize continuation lines in environment files /etc/sysconfig/xxxx
Summary: systemd doesn't recognize continuation lines in environment files /etc/syscon...
Status: RESOLVED FIXED
Alias: None
Product: systemd
Classification: Unclassified
Component: general (show other bugs)
Version: unspecified
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: systemd-bugs
QA Contact: systemd-bugs
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-12-10 13:57 UTC by Per Jessen
Modified: 2013-01-18 16:52 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Per Jessen 2012-12-10 13:57:34 UTC
I'm updating some stuff to work on opensuse 12.2 with systemd, and it looks like systemd doesn't recognize continuation lines in /etc/sysconfig/xxxx ?

For instance, I copied over the following from the previous system:

SPAMD_ARGS="--socketpath=/var/lib/bulwark/spamd \
--nouser-config \
--virtual-config-dir=/var/lib/bulwark/domains/%l/%d \
--siteconfigpath=/var/lib/bulwark/config \
--username=bulwark \
--max-children=25 \
--timeout-child=600"


When I tried to start the spamd service, it failed:

spamd[4547]: warn: Unknown option: -socketpath

SPAMD_ARGS only went as far as "--socketpath=/var/lib/bulwark/spamd \", the
rest was ignored.

Also reported here:  https://bugzilla.novell.com/show_bug.cgi?id=793411
Comment 1 Zbigniew Jedrzejewski-Szmek 2013-01-18 16:52:37 UTC
Fixed in http://cgit.freedesktop.org/systemd/systemd/commit/?id=565d91fdf198.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.